# Quant-Lab

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  alembic.ini  inspect_data.py  pyproject.toml  test_chart.py
.claude/: settings.local.json
config/: instruments.yaml  prop_firms.yaml  settings.yaml  validation_thresholds.yaml
dashboard-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
dashboard-ui/src/: App.tsx  index.css
docs/: ARCHITECTURE.md  BACKTEST_FINDINGS.md  DECISIONS.md  KNOWLEDGE_TRANSFER.md  PHASE_1_SPEC.md  PHASE_2_SPEC.md  PHASE_3_SPEC.md  PHASE_4_SPEC.md  PHASE_5_SPEC.md  PHASE_6_SPEC.md  pipeline_state.yaml
docs/agent_prompts/: DATA-001.md  EXEC-001.md  MON-001.md  ORCH-001.md  SIG-001.md  VAL-001.md
models/NQ_20260224_210453/: evaluation.json  metadata.json
models/NQ_20260404_053924/: evaluation.json  metadata.json
models/NQ_20260404_185203/: evaluation.json  metadata.json
models/NQ_20260404_230538/: evaluation.json
models/NQ_20260404_230908/: evaluation.json  metadata.json
models/NQ_20260405_015538/: evaluation.json
models/NQ_20260405_147t_5m_15m_multiclass-250602-260220/: evaluation.json  metadata.json
scripts/: analyze_backtest.py  analyze_trailing_dd.py  audit_lookahead.py  dashboard.py  experiment_tab.py  first_touch_analysis.py  ml_training_tab.py  process_batch_download.py  run_backtest.py  run_pipeline.py  run_replay.py  train_dashboard_model.py
src/alpha_lab/: __init__.py
test-chart/: nq_candlestick.py
tests/: conftest.py
(+227 files in other folders)
