[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-signal-lab"
version = "0.1.0"
description = "Multi-agent quantitative trading research system for NQ/ES futures"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "polygon-api-client>=1.14.0",
    "databento>=0.40",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "streamlit>=1.38",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "scipy.*"]
ignore_missing_imports = true
